--- a/iac/terraform/00-concepts/cfn/terraform-lab.yaml
+++ b/iac/terraform/00-concepts/cfn/terraform-lab.yaml
@@ -155,10 +155,11 @@ Resources:
         # SSM Session Manager access
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
         # S3 full access (for Terraform S3 exercises)
-        # Using managed policy avoids permission gaps as AWS provider evolves
         - arn:aws:iam::aws:policy/AmazonS3FullAccess
         # CloudFormation read access (for querying stack outputs)
         - arn:aws:iam::aws:policy/AWSCloudFormationReadOnlyAccess
+        # VPC full access (for Terraform VPC/networking exercises)
+        - arn:aws:iam::aws:policy/AmazonVPCFullAccess
       Policies:
         # Terraform learning permissions (scoped)
         - PolicyName: TerraformLearningPermissions
@@ -172,38 +173,6 @@ Resources:
                   - ec2:CreateTags
                   - ec2:DeleteTags
                 Resource: '*'
-
-              - Effect: Allow
-                Action:
-                  - ec2:CreateVpc
-                  - ec2:DeleteVpc
-                  - ec2:ModifyVpcAttribute
-                  - ec2:CreateSubnet
-                  - ec2:DeleteSubnet
-                  - ec2:CreateSecurityGroup
-                  - ec2:DeleteSecurityGroup
-                  - ec2:AuthorizeSecurityGroupIngress
-                  - ec2:AuthorizeSecurityGroupEgress
-                  - ec2:RevokeSecurityGroupIngress
-                  - ec2:RevokeSecurityGroupEgress
-                  - ec2:CreateInternetGateway
-                  - ec2:DeleteInternetGateway
-                  - ec2:AttachInternetGateway
-                  - ec2:DetachInternetGateway
-                  - ec2:CreateRouteTable
-                  - ec2:DeleteRouteTable
-                  - ec2:CreateRoute
-                  - ec2:DeleteRoute
-                  - ec2:AssociateRouteTable
-                  - ec2:DisassociateRouteTable
-                  - ec2:AllocateAddress
-                  - ec2:ReleaseAddress
-                  - ec2:CreateNatGateway
-                  - ec2:DeleteNatGateway
-                Resource: '*'
-                Condition:
-                  StringEquals:
-                    aws:RequestedRegion: ap-northeast-1
 
               # IAM read permissions (for viewing roles)
               - Effect: Allow
